Implement general routes for auth provider
